# fin-dashboard

./: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-build.sh  docker-compose.yml  run_all.sh
src/: main.rs  ws_handler.rs
static/: dashboard.html
workers/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
workers/src/: main.rs
