[package]
name = "workers"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = "0.21"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
